// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ngHotReloadPlugin ExportAllDeclaration 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      return {};
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export * from 'foo';",
}
`;

exports[`ngHotReloadPlugin Named export with source 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      return {};
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { foo } from 'bar';",
}
`;

exports[`ngHotReloadPlugin No code transformation should be done when no angular reference is present 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "const foo = 'bar';
const bar = 'foo';
export { foo, bar as bar2, foo as default };",
}
`;

exports[`ngHotReloadPlugin default export class 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {
  __ngHotReload_default
} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      class Test {
        constructor() {}

      }

      return {
        __ngHotReload_default: Test
      };
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { __ngHotReload_default as default };",
}
`;

exports[`ngHotReloadPlugin default export identifier 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {
  __ngHotReload_default
} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      const foo = 'bar';
      return {
        __ngHotReload_default: foo
      };
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { __ngHotReload_default as default };",
}
`;

exports[`ngHotReloadPlugin default export member expression 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {
  __ngHotReload_default
} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      const obj = {
        foo: 'bar'
      };
      return {
        __ngHotReload_default: obj.foo
      };
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { __ngHotReload_default as default };",
}
`;

exports[`ngHotReloadPlugin named export class declaration 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {
  __ngHotReload_Foo
} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      class Foo {}

      ;
      return {
        __ngHotReload_Foo: Foo
      };
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { __ngHotReload_Foo as Foo };",
}
`;

exports[`ngHotReloadPlugin named export variable declaration 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {
  __ngHotReload_foo,
  __ngHotReload_bar
} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      const foo = 'bar',
            bar = 'foo';
      return {
        __ngHotReload_foo: foo,
        __ngHotReload_bar: bar
      };
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { __ngHotReload_foo as foo, __ngHotReload_bar as bar };",
}
`;

exports[`ngHotReloadPlugin named exports 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "import * as angular from 'angular';

const {
  __ngHotReload_foo,
  __ngHotReload_bar2,
  __ngHotReload_default
} = function (__ngHotReloadLoaderAngularGlobal) {
  var __ngHotReload_exports__;

  var angular = module.hot ? function () {
    var loader = require(\\"ng-hot-reload-core\\");

    return loader.decorateAngular({
      angular: __ngHotReloadLoaderAngularGlobal,
      forceRefresh: true,
      preserveState: true
    });
  }() : __ngHotReloadLoaderAngularGlobal;

  try {
    __ngHotReload_exports__ = function () {
      const foo = 'bar';
      const bar = 'foo';
      return {
        __ngHotReload_foo: foo,
        __ngHotReload_bar2: bar,
        __ngHotReload_default: foo
      };
    }();
  } finally {
    (function () {
      if (module.hot && angular.__ngHotReload$didRegisterProviders) {
        module.hot.accept(function (err) {
          if (err) {
            console.error(err);
          }
        });
      }
    })();
  }

  return __ngHotReload_exports__;
}(require('angular'), angular);

export { __ngHotReload_foo as foo, __ngHotReload_bar2 as bar2, __ngHotReload_default as default };",
}
`;
